<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        android:scrollbars="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/name_hint"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/toppings_text_view"
                    style="@style/HeaderTextStyle"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/toppings_text"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/whippedcream_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingLeft="24dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/whippedcream_checkbox"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/chocolate_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:paddingLeft="24dp"
                    android:text="@string/chocolate_checkbox"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/HeaderTextStyle"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/quantity"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/quantity_minus_view"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="8dp"
                    android:onClick="decrement"
                    android:text="-"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/quantity_display_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="8dp"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/quantity_plus_button_view"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:onClick="increment"
                    android:text="+"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <!--<TextView-->
                    <!--android:id="@+id/order_summary_text_view"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginLeft="16dp"-->
                    <!--android:layout_marginRight="16dp"-->
                    <!--android:layout_marginBottom="8dp"-->
                    <!--android:text="@string/order_summary"-->
                    <!--android:textAllCaps="true"-->
                    <!--android:textSize="16sp" />-->


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/summarytext_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:paddingTop="8dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:onClick="submitOrder"
                    android:text="@string/order"
                    android:textAllCaps="true" />

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:onClick="clearCount"
                    android:text="@string/clear"
                    android:textAllCaps="true" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
